@@ -21,6 +21,7 @@
     NSString *anchor;
     NSArray *_documentState;
     NSMutableArray *_subItems;
+    NSMutableDictionary *pageCache;
     BOOL _loadedIcon;
     BOOL _isTargetItem;
 }
@@ -62,4 +63,10 @@
 - (WebHistoryItem *)childItemWithName:(NSString *)name;
 - (WebHistoryItem *)targetItem;
 
+@end
+
+@interface WebHistoryItem (WebPrivate)
+- (BOOL)pageCacheEnabled;
+- (void)setPageCacheEnabled: (BOOL)f;
+- (NSMutableDictionary *)pageCache;
 @end
